--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -7,15 +8,19 @@
 
 body {
     min-height: 100vh;
+    width: 93%;
     display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
     padding: 20px;
-    background: lightblue;
+    background: #EDEDEF;
 }
 
 .container {
+    justify-content: space-evenly;
     max-width: 700px;
+    display: flex;
     width: 100%;
     background: #fff;
     padding: 25px;
@@ -81,3 +86,4 @@ p {
         flex-wrap: wrap;
     }
 }
+
