--- a/app/public/css/registration.css
+++ b/app/public/css/registration.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +6,12 @@
 }
 
 body {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 20px;
-    background: #EDEDEF;
+    background: lightblue;
 }
 
 .container {
@@ -18,7 +21,6 @@ body {
     padding: 25px;
     border-radius: 8px;
 }
-
 
 .container header {
     font-size: 1.2rem;
@@ -75,4 +77,3 @@ body {
         flex-wrap: wrap;
     }
 }
-
