--- a/app/public/css/history.css
+++ b/app/public/css/history.css
@@ -1,9 +1,14 @@
 /*image container*/
 .image-container {
-    margin-left: -112px; margin-top: -25px; position: relative;
+    position: relative;
+    margin-left: -196px;
+    margin-top: -25px;
 }
 #mainImg {
-    width: 108%;
+    position: relative;
+    margin-left: -196px;
+    margin-top: -25px;
+    width: 127%;
 }
 .img-txt {
     COLOR: white;
@@ -34,20 +39,23 @@
     color: white;
     padding: 12px;
 }
-.card-container {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
+body{
+    overflow-x: hidden;
 }
-.card {
-    width: 300px;
-    height: 300px;
-    margin-right: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    scroll-snap-align: center;
-    transition: transform 0.3s ease-in-out;
-}
+/*.card-container {*/
+/*    display: flex;*/
+/*    overflow-x: auto;*/
+/*    scroll-snap-type: x mandatory;*/
+/*}*/
+/*.card {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*    margin-right: 20px;*/
+/*    background-color: #fff;*/
+/*    box-shadow: 0 2px 8px rgba(0,0,0,0.1);*/
+/*    scroll-snap-align: center;*/
+/*    transition: transform 0.3s ease-in-out;*/
+/*}*/
 /*-------------------------------*/
 .card:hover {
     transform: scale(1.05);
@@ -56,29 +64,48 @@
     max-width: 100%;
     max-height: 100%;
 }
+.cardButton {
+    position: absolute;
+}
 .card-container {
-    margin-top: 15px;
-    display: flex;
+    margin-top: 30px;
     position: relative;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    max-width: 100%;
+    height: auto;
 }
-.card:first-child {
-    margin-left: 20px;
+
+.card {
+    position: relative;
+    flex-basis: 282px;
+    margin: 0px 60px 38px 21px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding-bottom: 20px;
 }
-.card:last-child {
-    margin-right: 0;
-}
+
 .card h3 {
-    margin-top: 12px;
-    margin-left: 20px;
-    margin-bottom: 10px;
+    margin: 12px 0px 10px 20px;
     font-size: 1.2rem;
 }
+
 .card p {
-    margin: 0;
     padding: 0 20px;
     font-size: 0.9rem;
     color: #666;
+
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
 }
+.card p::-webkit-scrollbar {
+    width: 0; /* Chrome, Safari, and Opera */
+}
+
 #learnMoreButton {
     position: absolute;
     top: 85%;
@@ -88,22 +115,11 @@
     padding: 5px;
 }
 /*--------------------------------*/
-/*table {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
-/*.table1, .table2, .table3, .table4 {*/
-/*    border-collapse: collapse;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
-
 th,
 td {
     border: 2px solid black;
     padding: 10px;
+
 }
 
 th[scope="col"] {
