--- a/app/public/css/historyCart.css
+++ b/app/public/css/historyCart.css
@@ -1,5 +1,5 @@
 .heading {
-    margin-left: -8%;
+    margin-left: -15.2%;
     display: inline-flex;
     border: 1px solid ;
     background-color: #584650;
@@ -24,33 +24,30 @@
     width: 10%;
     padding: 7px;
     margin: 20px 0 20px 0;
+    margin-left: -5%;
 }
-#timeBut:hover {
+/*#timeBut:hover {*/
+/*    background-color: #BAC127;*/
+/*    color: white;*/
+/*}*/
+
+#minus-btn:hover, #plus-btn:hover {
     background-color: #BAC127;
     color: white;
+
 }
 
 #languageBut {
     width: 10%;
     padding: 7px;
     margin: 20px 0 20px 0;
+    margin-left: -5%;
 }
-#languageBut:hover {
-    background-color: #BAC127;
-    color: white;
-}
+/*#languageBut:hover {*/
+/*    background-color: #BAC127;*/
+/*    color: white;*/
+/*}*/
 /*--------------------------------*/
-/*table {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
-/*.table1, .table2, .table3, .table4 {*/
-/*    border-collapse: collapse;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
 
 th,
 td {
@@ -87,7 +84,7 @@ td + td {
 }
 
 table {
-    border-collapse: collapse;
+    /*border-collapse: collapse;*/
     width: 50%; /* each table will take up half of the container */
     margin-left: 5%;
 }
@@ -106,12 +103,3 @@ table {
     margin: 0 10px;
 }
 
-.ticket-box button {
-    display: inline-block;
-    padding: 5px 10px;
-    border: none;
-    background-color: #f2f2f2;
-    color: #333;
-    font-size: 16px;
-    cursor: pointer;
-}
