--- a/app/public/css/dance_style.css
+++ b/app/public/css/dance_style.css
@@ -10,9 +10,10 @@ body {
 body, .card{
     background: #363636;
 }
-.card{
-    border-radius: 20%;
+#ticket_card{
+    border-radius: 10%;
 }
+
 p{
     color: #dddddd;
 }
@@ -43,3 +44,16 @@ img.hover-shadow {
 .hover-shadow:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+#ticket_image{
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+}
+
+#ticket_text>li{
+    color: #fff;
+    margin-top: 10px;
+    background-color: #363636;
+    border-style: hidden;
+}
+
