--- a/app/public/css/historyManagement.css
+++ b/app/public/css/historyManagement.css
@@ -1,13 +1,10 @@
-.bg-mynav {
-    background-color: #BAC127;
-}
 
 body {
     font-size: 1rem;
     background-color: #ffffff;
 }
 
-.container {
+.container1 {
     margin-top: 20px;
 }
 
@@ -21,14 +18,6 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
-
-#mytable td[name='content'] {
-    /* CSS styles go here */
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    background-color: #BAC127;
-}
-
 
 td {
     padding: 10px;
