--- a/app/public/css/addContent.css
+++ b/app/public/css/addContent.css
@@ -1,6 +1,22 @@
-
 #error-msg {
     color: red;
     float: right;
     font-size: 0.8rem;
 }
+
+#header {
+    color: #3D1A78;
+}
+
+label {
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: #3D1A78;
+
+}
+
+#selectedDay {
+    font-weight: bold;
+}
+
+
