Squashed commit of the following:
commit 38159e83294c32fcbf8b0f91479a8336c8582669
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Wed Mar 29 10:57:36 2023 +0200

    In progress

commit 74331623f55e171d71cd40829aabdb989a3054fe
Merge: ae32387 5ff25db
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Tue Mar 28 16:00:15 2023 +0200

    Merge remote-tracking branch 'origin/main' into AizazAhsan

    # Conflicts:
    #	.idea/workspace.xml

commit ae32387c5ade7a41df2937da3f5e6f8ae6243e97
Merge: 7335570 2022159
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Tue Mar 28 15:57:55 2023 +0200

    Merge remote-tracking branch 'origin/Mirko' into AizazAhsan

    # Conflicts:
    #	.idea/workspace.xml
    #	vendor/composer/installed.php

commit 73355700561a6f614d53011d1da9969de9c4dba9
Merge: 7fb8b0b 88f4aef
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Tue Mar 28 15:52:31 2023 +0200

    Merge remote-tracking branch 'origin/main' into AizazAhsan

    # Conflicts:
    #	vendor/composer/installed.php

commit 7fb8b0be52fd5dc2cec58c0666bf364bb17355ba
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Tue Mar 28 15:51:52 2023 +0200

    Just a commit before fetching main

commit 1fa72f2c4e9900ef6984aa48e940c1c620186536
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Tue Mar 28 00:54:35 2023 +0200

    Added Edit to History Management

commit bcbb1d728309c781c88e8f445a727bc0f272f10e
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Mon Mar 27 19:55:47 2023 +0200

    random

commit 5aa0293f6d414f538664052aa11ec4701d6309e3
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Mon Mar 27 00:56:19 2023 +0200

    Working on add to Cart

commit bc5106e85cab68004e86007b482c3146cfa8b286
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Sun Mar 26 19:30:07 2023 +0200

    added new stuff

commit 1817159488fee6ebb2f0bc317ac6727918e667a3
Author: AizazAhsan <aizazahsan23@gmail.com>
Date:   Sun Mar 26 18:53:11 2023 +0200

    added new stuff, fixed more

commit 67407a5ade

--- a/app/public/css/historyManagement.css
+++ b/app/public/css/historyManagement.css
@@ -1,13 +1,10 @@
-.bg-mynav {
-    background-color: #BAC127;
-}
 
 body {
     font-size: 1rem;
     background-color: #ffffff;
 }
 
-.container {
+.container1 {
     margin-top: 20px;
 }
 
@@ -15,4 +12,20 @@ body {
     color: red;
     float: right;
     font-size: 0.8rem;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td {
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+input[type=text] {
+    border: none;
+    padding: 0;
+    width: 100%;
 }
