--- a/app/public/css/style_index.css
+++ b/app/public/css/style_index.css
@@ -1,4 +1,6 @@
-
+.about-header{
+    color: #3D1A78;
+}
 
 .btn-primary
 {
@@ -6,7 +8,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: #0066CC;
+    background: #3D1A78;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     padding: 0.5em;
